# vbc

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
conf/: demo.yaml  exiftool.conf  vbc.yaml  vbc.yaml.example
docs/: .gitignore  BUILDING.md  DOCUMENTATION_CHANGELOG.md  TODO.md  index.md
docs/api/: config.md  domain.md  infrastructure.md  pipeline.md  ui.md  utils.md
docs/architecture/: events.md  overview.md  pipeline.md
docs/development/: audit-2026-05-31-code-quality-security.md  config_vs_cli_analysis.md  contributing.md  migration.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/user-guide/: advanced.md  cli.md  runtime-controls.md
scripts/: cleanup_source_archive.py  generate_metadata_manifests.py  manual_proxy_cpu.sh  manual_proxy_gpu.sh  repair_corrupted_flv.py  repair_failed_manifests.py  repair_output_mtimes.py  restore_failed_manifest.py  serve-docs.sh  test1.sh  test2.sh  video_error_analyzer.py
tests/: README.md  conftest.py  test_docs_sync.py
tests/integration/: test_advanced_errors.py  test_color_fix.py  test_concurrency.py  test_error_markers.py  test_hw_cap.py  test_metadata_copy.py  test_orchestrator.py  test_real_files.py  test_real_files_autorotation.py  test_real_files_compression.py  test_real_files_dynamic_cq.py  test_real_files_dynamic_quality.py  test_real_files_metadata.py  test_skipping.py
tests/unit/: test_architecture_boundaries.py  test_config_models.py  (+38 more)
vbc/: main.py
(+53 files in other folders)
